--- a/02-accordeon-nombre.html
+++ b/02-accordeon-nombre.html
@@ -17,14 +17,16 @@
       <section>
         <button @click=" Button = 1 "> 
           bouton 1 </button>
-        <p x-show="Button === 1">
+        <p x-show="Button === 1"
+         x-transition.scale.origin.left>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum perferendis fuga totam id culpa? Molestiae in, porro, earum deleniti quia dolore sequi inventore impedit ut dolor itaque alias officia! Necessitatibus.</p>
       </section>
 
       <section>
         <button @click=" Button = 2 ">
           bouton 2</button>
-        <p x-show="Button === 2">
+        <p x-show="Button === 2"
+           x-transition.scale.origin.left>
           Consectetur ad nam mollitia neque facere saepe voluptatem, omnis repellat nisi voluptas architecto quos beatae quod tempore animi quam sed? Quibusdam reiciendis sed error culpa excepturi ea nesciunt aspernatur dolorum?</p>
       </section>
 
@@ -32,7 +34,7 @@
         <button @click=" Button = 3 "> 
           bouton 3</button>
         <p x-show="Button === 3"
-        >Porro voluptatum, mollitia voluptate, perspiciatis doloribus corporis exercitationem qui omnis necessitatibus recusandae illum ipsa eum sequi dignissimos ad ut earum repudiandae quia architecto? Officia suscipit vitae, veniam corrupti natus similique!</p>
+           x-transition.scale.origin.left>Porro voluptatum, mollitia voluptate, perspiciatis doloribus corporis exercitationem qui omnis necessitatibus recusandae illum ipsa eum sequi dignissimos ad ut earum repudiandae quia architecto? Officia suscipit vitae, veniam corrupti natus similique!</p>
       </section>
     </div>
 
