--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -8,5 +8,37 @@
   </head>
   <body>
     <h1>Accordéon horizontal</h1>
+    
+    <ul id="accordeon">
+      <li>
+        <figure>
+          <img src="https://picsum.photos/100?random=1" alt="" width="102">
+          <figcaption>
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+          </figcaption>
+        </figure>
+      </li>
+      
+      <li class="actif">
+        <figure>
+          <img src="https://picsum.photos/100?random=2" alt="" width="102">
+          <figcaption>
+            <h3>Similique, magni. Similique.</h3>
+            <p>Ratione cupiditate minima veniam saepe suscipit.</p>
+          </figcaption>
+        </figure>
+      </li>
+      <li>
+        <figure>
+          <img src="https://picsum.photos/100?random=3" alt="" width="102">
+          <figcaption>
+            <h3>Quisquam, ut adipisci.</h3>
+            <p>Praesentium suscipit at corrupti nemo accusantium?</p>
+          </figcaption>
+        </figure>
+      </li>
+    </ul>
+
   </body>
 </html>
