--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -41,7 +41,6 @@ ul#accordeon li figure figcaption {
 width: 200px;
 padding: 15px;
 display: flex;
-flex-direction: column;
 justify-content: space-between;
 }  
 ul#accordeon li figure figcaption  {
@@ -53,11 +52,13 @@ padding: 5;
 
 
   </head>
+
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <body>
     <h1>Accordéon horizontal</h1>
     
-    <ul id="accordeon">
-      <li>
+    <ul id="accordeon" x-data="{IsOpen:0}">
+      <li :class="{actif:IsOpen === 1,}" @click="IsOpen=1">
         <figure>
           <img src="https://picsum.photos/100?random=1" alt="" width="102">
           <figcaption>
@@ -67,8 +68,8 @@ padding: 5;
         </figure>
       </li>
 
-      <li class="actif">
-        <figure>
+      <li class="actif" :class="{actif:IsOpen === 2,}" @click="IsOpen=2">
+        <figure >
           <img src="https://picsum.photos/100?random=2" alt="" width="102">
           <figcaption>
             <h3>Similique, magni. Similique.</h3>
@@ -77,7 +78,7 @@ padding: 5;
         </figure>
       </li>
 
-      <li>
+      <li :class="{actif:IsOpen === 3,}" @click="IsOpen=3">
         <figure>
           <img src="https://picsum.photos/100?random=3" alt="" width="102">
           <figcaption>
