Finition de l'accordéon hozirontal

--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -29,6 +29,7 @@ ul#accordeon li.actif {
 ul#accordeon li figure {
 display: flex;
 padding: 0px;
+height: 100px;
 margin: 0;
 width: 317px
 ;
@@ -72,7 +73,7 @@ padding: 5;
         <figure >
           <img src="https://picsum.photos/100?random=2" alt="" width="102">
           <figcaption>
-            <h3>Similique, magni. Similique.</h3>
+            <h3>Simili, magni. Simili.</h3>
             <p>Ratione cupiditate minima veniam saepe suscipit.</p>
           </figcaption>
         </figure>
@@ -82,7 +83,7 @@ padding: 5;
         <figure>
           <img src="https://picsum.photos/100?random=3" alt="" width="102">
           <figcaption>
-            <h3>Quisquam, ut adipisci.</h3>
+            <h3>Quis, adipisci.</h3>
             <p>Praesentium suscipit at corrupti nemo accusantium?</p>
           </figcaption>
         </figure>
