--- a/05-onglets.html
+++ b/05-onglets.html
@@ -13,7 +13,7 @@
       ouvert : 1,
      }">
      <ul role="tablist">
-      <li role="tab">Onglet 1</li>
+      <li class="actif" role="tab">Onglet 1</li>
       <li role="tab">Onglet 2</li>
       <li role="tab">Onglet 3</li>
      </ul>
