--- a/05-onglets.html
+++ b/05-onglets.html
@@ -19,5 +19,20 @@
      </ul>
     
     </div>
+    <div>
+      <div role="tabpanel" x-show="ouvert === 1">
+        <h1>Panneau 1</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi corrupti molestias harum, nulla doloremque minima reiciendis facere beatae provident sunt dolor fugit hic soluta. Laboriosam qui error eligendi eos ut?</p>
+      </div>
+      <div role="tabpanel" x-show="ouvert === 2">
+        <h1>Panneau 2</h1>
+        <p>Cumque, modi mollitia? Et est perferendis dolores possimus excepturi dicta, nulla perspiciatis qui tempora in optio enim quod expedita numquam veniam obcaecati, harum at! Omnis officiis illum deleniti dicta doloremque?</p>
+      </div>
+      <div role="tabpanel" x-show="ouvert === 3">
+        <h1>Panneau 3</h1>
+        <p>Quos quae ipsam, dolor voluptates eligendi omnis quam odit molestiae non, nisi magnam amet quasi et vitae! Assumenda odit suscipit vero. Assumenda quod ea, eaque animi voluptatum ab nobis et?</p>
+      </div>
+    </div>
+
   </body>
 </html>
