--- a/05-onglets.html
+++ b/05-onglets.html
@@ -18,6 +18,10 @@ div[role="tabpanel"]{
 
 div[role="tabpanel"] > * {
   position: absolute;
+  opacity: 0;
+}
+div[role="tabpanel"] > .actif {
+  opacity: 1;
 }
 
 
