--- a/05-onglets.html
+++ b/05-onglets.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onglets</title>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     
 
 <style>
 
-div[role="tabpanel"]{
+#onglets div{ 
 
   position: relative;
   height: 200px;
@@ -20,8 +21,7 @@ div[role="tabpanel"] > * {
   position: absolute;
   opacity: 0;
 }
-div[role="tabpanel"] > .actif {
- 
+[role="tabpanel"] .actif {
   opacity: 1;
 }
 
@@ -33,18 +33,17 @@ div[role="tabpanel"] > .actif {
 
 
   </head>
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+ 
+
   <body>
     <h1>Onglets</h1>
 
-    <div id="onglets" x-data="{
-      ouvre : 1
-     }">
-     <ul role="tablist">
-      <li :class="{actif: ouvre === 1} "role="tab" @click="ouvre=1">Onglet 1</li>
-      <li :class="{actif: ouvre === 2} "role="tab" @click="ouvre=2">Onglet 2</li>
-      <li :class="{actif: ouvre === 3} "role="tab" @click="ouvre=3">Onglet 3</li>
-     </ul>
+    <div id="onglets" x-data="{ ouvre : 1 }">
+  <ul role="tablist">
+    <li :class="{actif: ouvre === 1}" role="tab" @click="ouvre=1">Onglet 1</li>
+    <li :class="{actif: ouvre === 2}" role="tab" @click="ouvre=2">Onglet 2</li>
+    <li :class="{actif: ouvre === 3}" role="tab" @click="ouvre=3">Onglet 3</li>
+  </ul>
     
     </div>
     <div>
