--- a/05-onglets.html
+++ b/05-onglets.html
@@ -23,7 +23,7 @@
   opacity: 0;
   
 }
-[role="tabpanel"].actif {
+[role=tabpanel].actif {
   opacity: 1;
 }
 
@@ -41,9 +41,9 @@
 
     <div id="onglets" x-data="{ ouvre : 1 }">
   <ul role="tablist">
-    <li  role="tab" @click="ouvre=1">Onglet 1</li>
-    <li  role="tab" @click="ouvre=2">Onglet 2</li>
-    <li  role="tab" @click="ouvre=3">Onglet 3</li>
+    <li  role="tab" @click="ouvre=1 ">Onglet 1</li>
+    <li  role="tab" @click="ouvre=2 ">Onglet 2</li>
+    <li  role="tab" @click="ouvre=3 ">Onglet 3</li>
   </ul>
     
     
