--- a/02-accordeon-nombre.html
+++ b/02-accordeon-nombre.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accordéon mémorisant par un nombre l'élèment ouvert</title>
   </head>
+
+  <a href="/index.html"> Accueil</a>
+  
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   
   <body>
