--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -51,7 +51,7 @@ padding: 5;
     </style>
 
 
-
+<a href="/index.html"> Accueil</a>
   </head>
 
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
